Bug 453801.  Make sure to not fire onload before deferred scripts have executed.  r+sr=sicking